--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
-cmake_minimum_required(VERSION 2.6)
-project(aio_bindings)
+cmake_minimum_required( VERSION 3.2.2 )
+project( aio_bindings )
 
-add_executable(aio_bindings main.cpp)
+set( CMAKE_CXX_FLAGS "-std=c++11 -O3" )
 
-install(TARGETS aio_bindings RUNTIME DESTINATION bin)
+add_executable( aio_bindings main.cc AIOContext.cc )
+
+target_link_libraries( aio_bindings aio )
